# marine-rs-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
crates/call-parameters/: Cargo.toml
crates/call-parameters/src/: lib.rs
crates/fce-test-macro/: Cargo.toml
crates/fce-test-macro-impl/: Cargo.toml
crates/fce-test-macro-impl/src/: attributes.rs  errors.rs  fce_test.rs  fce_test_.rs  lib.rs
crates/fce-test-macro-impl/src/fce_test/: config_utils.rs  config_worker.rs  fce_test_impl.rs  glue_code_generator.rs  mod.rs  module_generator.rs  utils.rs
crates/fce-test-macro-impl/src/fce_test/module_generator/: methods_generator.rs  methods_generator_utils.rs  record_type_generator.rs
crates/fce-test-macro/src/: attributes.rs  errors.rs  fce_test.rs  lib.rs
crates/macro/: Cargo.toml
crates/macro-testing-utils/: Cargo.toml
crates/macro-testing-utils/src/: lib.rs
crates/macro/src/: fce_ast_types.rs  lib.rs  macro_attr_parser.rs  macro_impl.rs  macro_input_parser.rs  parsed_type.rs  token_stream_generator.rs  wasm_type.rs
crates/macro/src/parse_macro_input/: item_fn.rs  item_foreign_mod.rs  item_record.rs
crates/macro/src/parsed_type/: fn_glue_code_generator.rs  foreign_mod_glue_code_generator.rs  glue_code_generator.rs
crates/macro/src/token_stream_generator/: fn_generator.rs  foreign_mod_generator.rs
crates/main/: Cargo.toml  expand.rs
crates/main/src/: call_parameters.rs  export_allocator.rs  lib.rs  logger.rs  module_manifest.rs  mounted_binary.rs  mounted_binary_result.rs  result.rs  sdk_version_embedder.rs
crates/main/src/export_allocator/: mod.rs
crates/main/src/logger/: mod.rs
crates/main/src/memory/: errors.rs  mod.rs
crates/main/src/result/: mod.rs
crates/marine-macro/: Cargo.toml
crates/marine-macro-export/: Cargo.toml
crates/marine-macro-export/src/: lib.rs
crates/marine-macro-impl/: Cargo.toml
crates/marine-macro-impl/src/: ast_types.rs  export_ast_types.rs  fce_macro_impl.rs  lib.rs  marine_macro_impl.rs  parse_macro_input.rs  parsed_type.rs  token_stream_generator.rs  utils.rs  wasm_type.rs
crates/marine-macro-impl/src/parse_macro_input/: item_fn.rs  item_foreign_mod.rs  item_record.rs  utils.rs
crates/marine-macro-impl/src/parsed_type/: fn_arg.rs  fn_epilog.rs  fn_prolog.rs  foreign_mod_arg.rs  foreign_mod_epilog.rs  foreign_mod_prolog.rs  traits.rs  utils.rs  vector_ser_der.rs
crates/marine-macro-impl/src/parsed_type/vector_ser_der/: der.rs  ser.rs
crates/marine-macro-impl/src/token_stream_generator/: fn_generator.rs  foreign_mod_generator.rs  record_generator.rs
crates/marine-macro-impl/src/token_stream_generator/record_generator/: field_values_builder.rs  record_deserializer.rs  record_serializer.rs
crates/marine-macro-impl/tests/: generation_tests_runner.rs  utils.rs
crates/marine-macro/src/: lib.rs
crates/marine-test-macro/: Cargo.toml
crates/marine-test-macro-impl/: Cargo.toml
crates/marine-test-macro-impl/src/: attributes.rs  errors.rs  lib.rs
crates/marine-test-macro-impl/src/fce_test/: config_utils.rs  module_generator.rs  utils.rs
crates/marine-test-macro-impl/src/fce_test/module_generator/: methods_generator_utils.rs  record_type_generator.rs
crates/marine-test-macro-impl/src/marine_test/: config_utils.rs  glue_code_generator.rs  marine_test_impl.rs  mod.rs  module_generator.rs  modules_linker.rs  service_generator.rs  token_stream_generator.rs  utils.rs
crates/marine-test-macro-impl/src/marine_test/module_generator/: methods_generator.rs  methods_generator_utils.rs  record_type_generator.rs
crates/marine-test-macro-impl/src/marine_test/token_stream_generator/: methods_generator.rs  methods_generator_utils.rs  record_type_generator.rs  (+2 more)
crates/marine-test-macro-impl/tests/: generation_tests_runner.rs  utils.rs
crates/marine-test-macro/src/: lib.rs
crates/timestamp-macro/: Cargo.toml
crates/timestamp-macro-impl/: Cargo.toml
crates/timestamp-macro-impl/src/: lib.rs
crates/timestamp-macro/src/: lib.rs
crates/wit/: Cargo.toml
crates/wit/src/: ast_types.rs  export_ast_types.rs  fce_ast_types.rs  fce_macro_impl.rs  lib.rs  parse_macro_input.rs  parsed_type.rs  token_stream_generator.rs  utils.rs  wasm_ast_extractor.rs  wasm_type.rs  wit_generator.rs
crates/wit/src/parse_macro_input/: item_fn.rs  item_foreign_mod.rs  item_record.rs
crates/wit/src/parsed_type/: fn_arg.rs  fn_epilog.rs  fn_prolog.rs  foreign_mod_arg.rs  foreign_mod_epilog.rs  foreign_mod_prolog.rs  traits.rs  vector_ser_der.rs  vector_utils.rs
crates/wit/src/token_stream_generator/: fn_generator.rs  foreign_mod_generator.rs  record_generator.rs
crates/wit/src/wit_generator/: fn_wit_generator.rs  foreign_mod_wit_generator.rs  record_wit_generator.rs  utils.rs
crates/wit/tests/: generation_tests_runner.rs  utils.rs
fluence/: Cargo.toml
fluence-test/: Cargo.toml
fluence-test/src/: lib.rs
fluence/src/: call_parameters.rs  lib.rs  mounted_binary.rs
fluence/tests/: compilation_tests_runner.rs  test_runner.rs
fluence/tests/compilation_tests/export_functions/: array_inner_refs.rs  array_inner_refs.stderr  arrays.rs  basic_types.rs  improper_types.rs  inner_vec_refs.rs  inner_vec_refs.stderr  ref_arrays.rs  ref_basic_types.rs
fluence/tests/compilation_tests/import_functions/: arrays.rs  arrays_out_inner_refs.rs  basic_ref_types.rs  basic_types.rs  improper_types.rs  ref_arrays.rs  ref_basic_types.rs
fluence/tests/compilation_tests/records/: basic_structs.rs  empty_struct.rs  struct_with_improper_types.rs  struct_with_private_fields.rs  struct_with_private_fields.stderr  unnamed_structs.rs
fluence/tests/export_functions/: array_inner_refs.rs  arrays.rs  basic_types.rs  improper_types.stderr
fluence/tests/import_functions/: arrays.rs  arrays_out_inner_refs.rs  arrays_out_inner_refs.stderr  basic_types.rs  improper_types.stderr
fluence/tests/records/: basic_structs.rs  struct_with_improper_types.rs  struct_with_improper_types.stderr  struct_with_private_fields.rs  struct_with_private_fields.stderr
sdk/: Cargo.toml
sdk-test/: CHANGELOG.md  Cargo.toml
sdk-test/src/: lib.rs
(+116 files in other folders)
