[package]
name = "fluence"
version = "0.5.0"  # remember to update html_root_url
description = "Fluence backend SDK for developing backend applications for the Fluence network"
documentation = "https://docs.rs/fluence/"
repository = "https://github.com/fluencelabs/rust-sdk"
authors = ["Fluence Labs"]
readme = "README.md"
keywords = ["fluence", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs] # https://docs.rs/about
all-features = true

[lib]
path = "src/lib.rs"

[dependencies]
fluence-sdk-macro = { path = "crates/fce-macro", version = "=0.5.0" }
fluence-sdk-test-macro = { path = "crates/fce-test-macro", version = "=0.5.0", optional = true }
fluence-sdk-main = { path = "crates/main", version = "=0.5.0" }

fluence-app-service= { version = "0.5.2", features = ["raw-module-api"], optional = true }

[features]
# Print some internal logs by log_utf8_string
debug = ["fluence-sdk-main/debug"]

# Enable logger (this will cause log_utf8_string to appear in imports)
logger = ["fluence-sdk-main/logger"]

# Enable the fce-test features (it'll bring fluence-app-service as a dependency)
fce-test = ["fluence-sdk-test-macro", "fluence-app-service"]

[workspace]
members = [
  "crates/fce-macro",
  "crates/fce-test-macro",
  "crates/main",
  "crates/wit",
  ]
