[package]
name = "marine-rs-sdk"
version = "0.14.0"
description = "Fluence backend SDK for developing backend applications for the Fluence network"
documentation = "https://docs.rs/fluence"
repository = "https://github.com/fluencelabs/marine-rs-sdk"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "AGPL-3.0-only"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
marine-call-parameters = { path = "crates/call-parameters", version = "=0.14.0" }
marine-macro = { path = "crates/marine-macro", version = "=0.14.0" }
marine-rs-sdk-main = { path = "crates/main", version = "=0.14.0" } # warning: silent compilation break on minor verison bump. See docs/update-guide.md for details
marine-timestamp-macro = { path = "crates/timestamp-macro", version = "=0.14.0" }

serde = { version = "1.0.189", features = ["derive"]}

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["marine-abi"]
# Print some internal logs by log_utf8_string
debug = ["marine-rs-sdk-main/debug"]

# Enable logger (this will cause log_utf8_string to appear in imports)
logger = ["marine-rs-sdk-main/logger"]

# Remove _initialize function with explicit call to __wasm_call_ctors
no-explicit-ctors-call = []

# Enable #[marine] attribute on structures and IT exports
marine-abi = [
    "marine-rs-sdk-main/marine-abi",
    "marine-call-parameters/marine-abi"
]

[workspace]
members = [
    "crates/call-parameters",
    "crates/main",
    "crates/marine-macro",
    "crates/marine-macro-impl",
    "crates/timestamp-macro",
    ]
