[package]
name = "fluence-test"
version = "0.1.4"  # remember to update html_root_url
description = "Fluence backend SDK for testing"
documentation = "https://docs.rs/fluence/"
repository = "https://github.com/fluencelabs/rust-sdk"
authors = ["Fluence Labs"]
#readme = "README.md"
keywords = ["fluence", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
fluence-sdk-test-macro = { path = "../crates/fce-test-macro", version = "0.1.4" }
fluence-app-service = { version = "0.7.0", features = ["raw-module-api"] }

backtrace = "0.3.58"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }
