[package]
name = "fluence-test"
version = "0.1.9"  # remember to update html_root_url
description = "Fluence backend SDK for testing"
documentation = "https://docs.rs/fluence-test"
repository = "https://github.com/fluencelabs/rust-sdk/tree/master/fluence-test"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly", "test"]
categories = ["api-bindings", "wasm", "development-tools::testing"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
marine-test-macro = { path = "../crates/marine-test-macro", version = "=0.1.9" }
fluence-app-service = { version = "0.7.0", features = ["raw-module-api"] }

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }
