[package]
name = "fluence"
version = "0.6.9"  # remember to update html_root_url
description = "Fluence backend SDK for developing backend applications for the Fluence network"
documentation = "https://docs.rs/fluence"
repository = "https://github.com/fluencelabs/rust-sdk"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
marine-macro = { path = "../crates/marine-macro", version = "=0.6.9" }
fluence-sdk-main = { path = "../crates/main", version = "=0.6.9" }
marine-timestamp-macro = { path = "../crates/timestamp-macro", version = "=0.6.9" }

serde = { version = "1.0.118", features = ["derive"]}

[dev-dependencies]
trybuild = "1.0"

[features]
# Print some internal logs by log_utf8_string
debug = ["fluence-sdk-main/debug"]

# Enable logger (this will cause log_utf8_string to appear in imports)
logger = ["fluence-sdk-main/logger"]
