[package]
name = "marine-rs-sdk-test"
version = "0.2.0"  # remember to update html_root_url
description = "Backend SDK that allows testing modules for the Marine runtime"
documentation = "https://docs.rs/marine-rs-sdk-test"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/fluence-test"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "test"]
categories = ["api-bindings", "wasm", "development-tools::testing"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
doctest = false

[dev-dependencies]
trybuild = "1.0"

[dependencies]
marine-test-macro = { path = "../crates/marine-test-macro", version = "=0.2.0" }
fluence-app-service = { version = "0.9.0", features = ["raw-module-api"] }

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }
