[package]
name = "marine-call-parameters"
version = "0.10.2"
edition = "2021"
description = "Contains CallParameters and SecurityTetralets structures for marine-rs-sdk"
documentation = "https://docs.rs/fluence"
repository = "https://github.com/fluencelabs/marine-rs-sdk"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[dependencies]
serde = "1.0.189"

[target.'cfg(target_arch = "wasm32")'.dependencies]
marine-macro = { path = "../marine-macro", version = "=0.10.2" }
marine-rs-sdk-main = { path = "../main", version = "=0.10.2" }

[features]
default = ["marine-abi"]
marine-abi = [
    "marine-rs-sdk-main/marine-abi"
]
