[package]
name = "marine-call-parameters"
version = "0.14.0"
edition = "2021"
description = "Contains CallParameters and SecurityTetralets structures for marine-rs-sdk"
documentation = "https://docs.rs/fluence"
repository = "https://github.com/fluencelabs/marine-rs-sdk"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "AGPL-3.0-only"

[dependencies]
rkyv = { version = "0.7.43", features = ["validation", "strict"], optional = true }
serde = "1.0.189"

[target.'cfg(target_arch = "wasm32")'.dependencies]
marine-macro = { path = "../marine-macro", version = "=0.14.0" }
marine-rs-sdk-main = { path = "../main", version = "=0.14.0" }

[features]
default = ["marine-abi"]
marine-abi = [
    "marine-rs-sdk-main/marine-abi"
]
