[package]
name = "fluence-sdk-macro"
version = "0.2.5"  # remember to update html_root_url
edition = "2018"
description = "Definition of `#[invoke_handler]` attribute"
documentation = "https://docs.rs/fluence/fluence-sdk-macro"
repository = "https://github.com/fluencelabs/rust-sdk/crates/macro"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[package.metadata.docs.rs] # https://docs.rs/about
all-features = true

[lib]
proc-macro = true

[dependencies]
fluence-sdk-wit = { path = "../wit", version = "=0.2.5" }
