[package]
name = "fluence-sdk-main"
version = "0.6.9"  # remember to update html_root_url
edition = "2018"
description = "Rust SDK for applications for the Fluence network"
documentation = "https://docs.rs/fluence-sdk-main"
repository = "https://github.com/fluencelabs/rust-sdk/tree/master/crates/main"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false

[dependencies]
marine-macro = { path = "../marine-macro", version = "=0.6.9" }

log = { version = "0.4.8", features = ["std"] }
serde = "=1.0.118"

[dev-dependencies]
simple_logger = "1.6.0" # used in doc test
lazy_static = "1.4.0" # used in doc test

[features]
# Print some internal logs by log_utf8_string
debug = []

# Enable logger (this will cause log_utf8_string to appear in imports)
logger = []
