[package]
name = "marine-rs-sdk-main"
version = "0.12.0"
edition = "2018"
description = "Contains logger, allocators and several other modules for marine-rs-sdk"
documentation = "https://docs.rs/marine-rs-sdk-main"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/main"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false

[dependencies]
log = { version = "0.4.20", features = ["std"] }
serde = "1.0.189"

[dev-dependencies]
simple_logger = "4.2.0" # used in doc test
lazy_static = "1.4.0" # used in doc test

[features]
# Print some internal logs by log_utf8_string
debug = []

# Enable logger (this will cause log_utf8_string to appear in imports)
logger = []

# Enable #[marine] attributes and IT exports
marine-abi = []
