[package]
name = "marine-macro-impl"
version = "0.10.0"
edition = "2018"
description = "Implementation of the `#[marine]` macro"
documentation = "https://docs.rs/fluence/marine-macro-impl"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/marine-macro-impl"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "interface-types"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.69"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
syn = { version = '1.0.109', features = ['full', "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
marine-macro-testing-utils = {path = "../macro-testing-utils"}
