[package]
name = "marine-macro"
version = "0.14.0"
edition = "2018"
description = "Definition of the `#[marine]` macro"
documentation = "https://docs.rs/fluence/marine-macro"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/marine-macro"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "AGPL-3.0-only"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true
doctest = false

[dependencies]
marine-macro-impl = { path = "../marine-macro-impl", version = "=0.14.0" }
marine-rs-sdk-main = { path = "../main", version = "=0.14.0" }
