[package]
name = "marine-test-macro-impl"
version = "0.1.5"  # remember to update html_root_url
edition = "2018"
description = "Implementation of the `#[marine_test]` macro"
repository = "https://github.com/fluencelabs/rust-sdk/crates/macro-test"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
#fluence-app-service = { version = "0.7.0", features = ["raw-module-api"] }
fce-wit-parser = "0.5.0"

darling = "0.12.2"
quote = "1.0.9"
proc-macro2 = "1.0.26"
proc-macro-error = { version = "1.0.4", default-features = false }
syn = { version = '1.0.64', features = ['full'] }
thiserror = "1.0.24"
