[package]
name = "marine-test-macro"
version = "0.1.6"  # remember to update html_root_url
edition = "2018"
description = "Definition of the `#[marine_test]` macro"
repository = "https://github.com/fluencelabs/rust-sdk/crates/macro-test"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true
doctest = false

[dependencies]
marine-test-macro-impl = { path = "../marine-test-macro-impl", version = "0.1.5" }

quote = "1.0.9"
proc-macro2 = "1.0.24"
proc-macro-error = { version = "1.0.4", default-features = false }
syn = { version = '1.0.64', features = ['full'] }
