[package]
name = "fce-timestamp-macro-impl"
version = "0.5.0"  # remember to update html_root_url
edition = "2018"
description = "Implementation of the `#[build_timestamp]` macro"
repository = "https://github.com/fluencelabs/rust-sdk/crates/timestamp-macro-impl"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
proc-macro2 = "1.0.26"
syn = { version = '1.0.64', features = ['full'] }
chrono = "0.4.19"
