[package]
name = "fce-timestamp-macro"
version = "0.5.0"  # remember to update html_root_url
edition = "2018"
description = "Definition of the `#[build_timestamp]` macro"
repository = "https://github.com/fluencelabs/rust-sdk/crates/timestamp-macro"
authors = ["Fluence Labs"]
keywords = ["fluence", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[lib]
proc-macro = true
doctest = false

[dependencies]
chrono = "0.4.19"
quote = "1.0.9"
