[package]
name = "marine-timestamp-macro"
version = "0.6.12"  # remember to update html_root_url
edition = "2018"
description = "Definition of the `#[build_timestamp]` macro"
documentation = "https://docs.rs/fluence/marine-timestamp-macro"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/marine-timestamp-macro"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"

[lib]
proc-macro = true
doctest = false

[dependencies]
chrono = "0.4.19"
quote = "1.0.9"
